Added more sections

--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,191 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="./output.css" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
+    <!-- HEADER START -->
+    <div class="w-full flex justify-between items-center py-3 px-10 bg-blue-500 text-white">
+        <div class="">
+            <img class="w-20 rounded-2xl"
+                src="https://png.pngtree.com/png-vector/20231017/ourmid/pngtree-youtube-play-button-sign-video-icon-logo-online-broadcasting-service-symbol-png-image_10292108.png"
+                alt="Logo">
+        </div>
+        <div>
+            <ul class="flex gap-10">
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Recipe</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Blog</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </div>
+        <div class="">
+            <ul class="flex gap-4">
+                <li></i>Facebook</li>
+                <li></i>Youtube</li>
+            </ul>
+        </div>
+    </div>
+    <!-- HEADER END -->
+
+    <!-- BANNER START -->
+    <div class="w-full h-[500px] bg-cover bg-center bg-[url('https://tinyurl.com/3yw9nxw5')]">
+        <div class="flex flex-col items-center justify-center h-full">
+            <h1 class="text-white text-center text-4xl md:text-6xl font-bold mb-10">Welcome to Our Recipe Platform</h1>
+            <div class="flex flex-col md:flex-row gap-4">
+                <a href="#"
+                    class="border border-blue-500 px-4 py-2 text-white rounded hover:bg-blue-600 hover:text-white">Learn
+                    More</a>
+                <a href="#" class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-700">Get Started</a>
+            </div>
+        </div>
+
+    </div>
+    <!-- BANNER END -->
+
+    <!-- CALLING START -->
+    <section class="container mx-auto py-20 text-center">
+        <h1 class="font-bold text-4xl capitalize">Introducing video calling support</h1>
+        <p class="max-w-3xl mx-auto py-8">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptate, distinctio minus alias repellat illo praesentium repellendus explicabo a mollitia odio culpa autem eligendi eveniet exercitationem!</p>
+        <button class="text-primary font-bold capitalize bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600 hover:cursor-pointer mb-8">
+            Explore Details <span>></span>
+        </button>
+
+        <div class="relative">
+            <img src="https://tinyurl.com/35nspu33" alt="" class="mx-auto w-full rounded-lg" />
+            <div class="absolute top-40 w-[200px] bg-[#fabf62] text-white p-8 rounded-tl-[20px] rounded-tr-[20px] rounded-bl-[20px] shadow-lg -left-20">
+                <p class="font-bold">Lorem ipsum dolor sit amet consectetur!</p>
+            </div>
+            <div class="absolute bottom-20 -right-20 w-[200px] bg-[#fabf62] text-white p-8 rounded-tl-[20px] rounded-tr-[20px] rounded-br-[20px] shadow-lg">
+                <p class="font-bold">Lorem ipsum dolor sit amet?</p>
+            </div>
+        </div>
+    </section>
+    <!-- CALLING END -->
+
+    <!-- CATEGORY START -->
+    <div class="container mx-auto w-full flex justify-between items-center py-10">
+        <h3 class="text-2xl font-bold">Categories</h3>
+        <button class="bg-blue-500 border border-blue-500 py-1 px-4 text-white rounded hover:cursor-pointer">View All
+            Categories</button>
+    </div>
+
+    <div class="w-full flex justify-center items-center py-10">
+        <div class="grid grid-cols-1 md:grid-cols-3 gap-6 max-w-5xl w-full">
+            <div class="bg-white p-6 rounded-lg shadow-lg">
+                <h2 class="text-xl font-bold mb-4">Category 1</h2>
+                <p class="text-gray-600">Description of category 1.</p>
+            </div>
+            <div class="bg-white p-6 rounded-lg shadow-lg">
+                <h2 class="text-xl font-bold mb-4">Category 2</h2>
+                <p class="text-gray-600">Description of category 2.</p>
+            </div>
+            <div class="bg-white p-6 rounded-lg shadow-lg">
+                <h2 class="text-xl font-bold mb-4">Category 3</h2>
+                <p class="text-gray-600">Description of category 3.</p>
+            </div>
+            <div class="bg-white p-6 rounded-lg shadow-lg">
+                <h2 class="text-xl font-bold mb-4">Category 4</h2>
+                <p class="text-gray-600">Description of category 1.</p>
+            </div>
+            <div class="bg-white p-6 rounded-lg shadow-lg">
+                <h2 class="text-xl font-bold mb-4">Category 5</h2>
+                <p class="text-gray-600">Description of category 2.</p>
+            </div>
+            <div class="bg-white p-6 rounded-lg shadow-lg">
+                <h2 class="text-xl font-bold mb-4">Category 6</h2>
+                <p class="text-gray-600">Description of category 3.</p>
+            </div>
+        </div>
+    </div>
+    <!-- CATEGORY END -->
+
+    <!-- PROCESS START -->
+    <div class="bg-blue-100 py-20">
+        <h1 class="text-center text-5xl font-bold pb-10"><span class="text-blue-700">Our</span> Process</h1>
+
+        <div class="max-w-4xl mx-auto flex flex-col gap-6">
+            <div class="flex gap-10">
+                <div class="flex justify-end">
+                    <div class="common_class">
+                        <img src="" alt="Icon" />
+                    </div>
+                </div>
+                <div class="bg-white border-2 border-blue-500 rounded p-4">
+                    <h1 class="text-xl font-bold">1. Create Your Profile</h1>
+                    <p class="text-lg mt-2">
+                        Sign up and personalize your profile to get started. Add your details, set your preferences. In
+                        this way you can go forward with your profile.
+                    </p>
+                </div>
+            </div>
+
+            <div class="flex gap-10">
+                <div class="w-[450px] flex justify-end">
+                    <div class="common_class">
+                        <img src="" alt="Icon" />
+                    </div>
+                </div>
+                <div class="bg-white border-2 border-blue-500 rounded p-4">
+                    <h1 class="text-xl font-bold">2. Create Your Profile</h1>
+                    <p class="text-lg mt-2">
+                        Sign up and personalize your profile to get started. Add your details, set your preferences. In
+                        this way you can go forward with your profile.
+                    </p>
+                </div>
+            </div>
+
+            <div class="flex gap-10">
+                <div class="w-[650px] flex justify-end">
+                    <div class="common_class">
+                        <img src="" alt="Icon" />
+                    </div>
+                </div>
+                <div class="bg-white border-2 border-blue-500 rounded p-4">
+                    <h1 class="text-xl font-bold">3. Create Your Profile</h1>
+                    <p class="text-lg mt-2">
+                        Sign up and personalize your profile to get started. Add your details, set your preferences. In
+                        this way you can go forward with your profile.
+                    </p>
+                </div>
+            </div>
+
+            <div class="flex gap-10">
+                <div class="w-[450px] flex justify-end">
+                    <div class="common_class">
+                        <img src="" alt="Icon" />
+                    </div>
+                </div>
+                <div class="bg-white border-2 border-blue-500 rounded p-4">
+                    <h1 class="text-xl font-bold">4. Create Your Profile</h1>
+                    <p class="text-lg mt-2">
+                        Sign up and personalize your profile to get started. Add your details, set your preferences. In
+                        this way you can go forward with your profile.
+                    </p>
+                </div>
+            </div>
+
+            <div class="flex gap-10">
+                <div class="flex justify-end">
+                    <div class="common_class">
+                        <img src="" alt="Icon" />
+                    </div>
+                </div>
+                <div class="bg-white border-2 border-blue-500 rounded p-4">
+                    <h1 class="text-xl font-bold">5. Create Your Profile</h1>
+                    <p class="text-lg mt-2">
+                        Sign up and personalize your profile to get started. Add your details, set your preferences. In
+                        this way you can go forward with your profile.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- PROCESS END -->
+
+    <!-- CONTACT START -->
     <div class="w-screen h-screen flex items-center justify-center">
         <div class="max-w-5xl w-full mx-auto flex flex-col md:flex-row gap-6 bg-white p-10 rounded-xl shadow-2xl">
             <div class="w-full md:w-1/2 bg-[#e2ecff] flex rounded-xl">
@@ -24,22 +206,29 @@
                 <form action="#" class="flex flex-col gap-4">
                     <div>
                         <label for="username" class="text-gray-500 pb-2 block">Username</label>
-                        <input class="w-full focus:outline-none border border-gray-500 px-4 py-2 rounded" type="text" id="username" name="username" placeholder="Username" required>
+                        <input class="w-full focus:outline-none border border-gray-500 px-4 py-2 rounded" type="text"
+                            id="username" name="username" placeholder="Username" required>
                     </div>
                     <div>
                         <label for="email" class="text-gray-500 pb-2 block">Email</label>
-                        <input class="w-full focus:outline-none border border-gray-500 px-4 py-2 rounded" type="email" id="email" name="email" placeholder="Email" required>
+                        <input class="w-full focus:outline-none border border-gray-500 px-4 py-2 rounded" type="email"
+                            id="email" name="email" placeholder="Email" required>
                     </div>
                     <div>
                         <label for="password" class="text-gray-500 pb-2 block">Password</label>
-                        <input class="w-full focus:outline-none border border-gray-500 px-4 py-2 rounded" type="password" id="password" name="password" placeholder="******" required>
+                        <input class="w-full focus:outline-none border border-gray-500 px-4 py-2 rounded"
+                            type="password" id="password" name="password" placeholder="******" required>
                     </div>
-                    <button class="bg-[#0082df] px-4 py-2 text-white rounded-md w-full hover:cursor-pointer hover:bg-blue-700" type="submit">Register</button>
+                    <button
+                        class="bg-[#0082df] px-4 py-2 text-white rounded-md w-full hover:cursor-pointer hover:bg-blue-700"
+                        type="submit">Register</button>
                 </form>
-                <p class="text-gray-500 text-center pt-10">Already have an account? <a href="#" class="text-blue-600 hover:underline">Login</a></p>
+                <p class="text-gray-500 text-center pt-10">Already have an account? <a href="#"
+                        class="text-blue-600 hover:underline">Login</a></p>
             </div>
         </div>
     </div>
+    <!-- CONTACT END -->
 </body>
 
 </html>
